# hatch-datadog-build-metadata

./: HISTORY.md  README.md  hatch.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
src/hatch_datadog_build_metadata/: __about__.py  hooks.py  metadata_hook.py  vcs_utils.py
tests/: conftest.py  test_build.py  test_metadata_config.py  test_vcs_utils.py  utils.py
