[build-system]
requires = ["hatchling>=1.1.0"]
build-backend = "hatchling.build"

[project]
name = "hatch-datadog-build-metadata"
dynamic = ["version"]
description = "Hatch build plugin for source code metadata used by APM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
keywords = [
  "apm",
  "datadog",
  "git",
  "hatch",
  "plugin",
  "tracing",
]
authors = [
  { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "hatchling>=1.1.0",
]

[project.urls]
History = "https://github.com/DataDog/hatch-datadog-build-metadata/blob/master/HISTORY.md"
Issues = "https://github.com/DataDog/hatch-datadog-build-metadata/issues"
Source = "https://github.com/DataDog/hatch-datadog-build-metadata"

[project.entry-points.hatch]
datadog-build-metadata = "hatch_datadog_build_metadata.hooks"

[tool.hatch.version]
path = "src/hatch_datadog_build_metadata/__about__.py"

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore McCabe complexity
  "C901",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["hatch_datadog_build_metadata"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use relative imports and assertions
"tests/**/*" = ["TID252", "S101"]

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.coverage.run]
source_pkgs = ["hatch_datadog_build_metadata", "tests"]
branch = true
parallel = true
omit = [
  "src/hatch_datadog_build_metadata/__about__.py",
]

[tool.coverage.paths]
hatch_datadog_build_metadata = ["hatch_datadog_build_metadata", "*/hatch-datadog-build-metadata/src/hatch_datadog_build_metadata"]
tests = ["tests", "*/hatch-datadog-build-metadata/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
